2003-08-25  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/gramps.glade: Add Alternative Family View tab. 
	* src/PedView.py (PedigreeView.__init__): Add parent argument to the
	constructor. Connect to the handling function on button press over the
	canvas to enable context menu; 
	(on_canvas_press, build_nav_menu): Add functions to enable context menu.
	* src/gramps_main.py (init_interface): Call PedView with self as parent.
	* src/PlaceView.py (merge): Change error message from people to places.

2003-08-24  Don Allingham  <dallingham@users.sourceforge.net>
	* src/plugins/FanChart.py: remove print statement
	* src/docgen/RTFDoc.py: change from TextDoc to BaseDoc
	* src/docgen/PdfDoc.py: change from TextDoc to BaseDoc
	* src/docgen/LaTeXDoc.py: change from TextDoc to BaseDoc
	* src/docgen/KwordDoc.py: change from TextDoc to BaseDoc
	* src/docgen/HtmlDoc.py: change from TextDoc to BaseDoc
	* src/docgen/AbiWordDoc.py: change from TextDoc to BaseDoc
	* src/docgen/AbiWord2Doc.py: change from TextDoc to BaseDoc
	* src/BaseDoc.py: support start_page and end_page for backwards
	compatibility to older versions
	* src/docgen/OpenOfficeDoc.py: support all graphics functionality

2003-08-24  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/FamilyView.py (edit_active_person, build_ap_menu,
	build_child_menu, build_spouse_menu, build_parents_menu,
	build_sp_parents_menu, edit_parents, edit_sp_parents): 
	Add navigation portion to all context menus. 
	* src/gramps_main.py (change_active_person): Cleanup with 
	enabling/disabling add/edit/remove buttons in different views upon the
	active person change. 

2003-08-23  Don Allingham  <dallingham@users.sourceforge.net>
	* src/BaseDoc.py: New base clase for TextDoc/DrawDoc combination
	* src/docgen/OpenOffice.py: Derive from BaseDoc instead of TextDoc

2003-08-20  Don Allingham  <dallingham@users.sourceforge.net>
	* src/gramps.py: catch missing textdomain in gtk.glade for
	older versions of pygtk
	* src/po/template.po: update